# bravli

./: .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml  setup.py  system.md
bravli/: __init__.py
bravli/applications/: __init__.py
bravli/atlas/: __init__.py  neuropils.py  render.py  skeletons.py
bravli/bench/: __init__.py  dataset.py
bravli/circuit/: __init__.py
bravli/composition/: __init__.py  composition.py
bravli/connectivity/: __init__.py  edges.py  matrix.py  (+2 more)
codev/: 00-foundations.org  01-parcellation.org  02-composition.org  03-factology.org  04-visualization.org  05-explore-mushroom-body.org  06-atlas.org  07-plan-fly-brain-2026.org  08-connectivity.org  09-synaptic-physiology.org  10-cell-models.org  11-simulation.org  12-portal.org  13-mushroom-body-circuit.org  14-isn-and-learning.org  15-brunel-phase-diagram.org  16-neuromodulatory-switching.org  17-stochastic-synapses.org  18-lif-vs-adex.org  20-predictive-coding.org  21-what-the-frog-sees.org  classical-circuits.org
collab/: context.org
develop/: devlog.org  landscape.org
manuscripts/: cortical-predictive-coding.org  executable-manuscripts-survey.org
tests/: test_adex.py  test_atlas.py  test_brunel.py  test_cell_models.py  test_composition.py  test_conditioning.py  test_connectivity.py  test_dataset.py  test_factology.py  test_frog.py  test_isn.py  test_mb_circuit.py  test_mushroom_body.py  test_neuromodulation.py  test_parcellation.py  test_physiology.py  test_portal.py  test_rate_engine.py  test_simulation.py  test_stochastic.py  test_upe.py  test_viz.py
(+193 files in other folders)
